# simpleble_flutter

./: README.md  pubspec.yaml
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: simpleble_flutter.dart
lib/src/: models.dart  simple_ble.g.dart  simple_ble_flutter.dart
pigeon/: simple_ble_pigeon.dart
windows/: CMakeLists.txt  simpleble_enums.h  simpleble_flutter.g.cpp  simpleble_flutter.g.h  simpleble_flutter_plugin.cpp  simpleble_flutter_plugin.h  simpleble_flutter_plugin_c_api.cpp
windows/cmake/find/: Findsimpleble.cmake
windows/include/simpleble_flutter/: simpleble_flutter_plugin_c_api.h
windows/lib/: simpleble-c-debug.lib
windows/lib/cmake/simpleble/: simpleble-config-debug.cmake  simpleble-config.cmake
